--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -20,7 +20,7 @@
     <div class="app-icon">🗺️</div>
     <div class="app-name">Battleplan</div>
   </a>
-  <a href="/bulletin" class="app-card">
+  <a href="/archives" class="app-card">
     <div class="app-icon">📢</div>
     <div class="app-name">Bulletin</div>
   </a>
