--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/static/browser/css/index.css" />
 </head>
 <body>
+<!-- TODO: Change layout to support phone better -->
 <h2 id="splash_text" style="text-align: center;top: 20px;position: absolute">Hello, ...</h2>
 <div class="container">
   <a href="/blame" class="app-card">
