--- a/modules/login/templates/index.html
+++ b/modules/login/templates/index.html
@@ -10,6 +10,7 @@
   <h2>JavaScript is disabled!</h2>
   <p>Please enable JavaScript to use this site.</p>
 </noscript>
+<!-- TODO: Make this bigger on mobile -->
 <div class="login-container">
   <h2>Login</h2>
   <form id="form">
