--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -10,25 +10,21 @@
 <!-- TODO: Change layout to support phone better -->
 <h2 id="splash_text" style="text-align: center;top: 20px;position: absolute">Hello, ...</h2>
 <div class="container">
-  <a href="/blame" class="app-card">
-    <div class="app-icon">🧠</div>
-    <div class="app-name">Blame</div>
-  </a>
   <a href="/files" class="app-card">
     <div class="app-icon">📁</div>
     <div class="app-name">Central Files</div>
-  </a>
-  <a href="/battleplan" class="app-card">
-    <div class="app-icon">🗺️</div>
-    <div class="app-name">Battleplan</div>
   </a>
   <a href="/archives" class="app-card">
     <div class="app-icon">📢</div>
     <div class="app-name">Bulletin</div>
   </a>
-  <a href="/statistics" class="app-card">
-    <div class="app-icon">📊</div>
-    <div class="app-name">Statistics</div>
+  <a href="/logs" class="app-card">
+    <div class="app-icon">💿</div>
+    <div class="app-name">App Logs</div>
+  </a>
+  <a href="/ledger" class="app-card">
+    <div class="app-icon">📒</div>
+    <div class="app-name">Ledger</div>
   </a>
 </div>
 <script src="/static/browser/js/splashtext.js"></script>
