Slightly changed browser

--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -9,25 +9,27 @@
 <body>
 <!-- TODO: Change layout to support phone better -->
 <h2 id="splash_text">Hello, ...</h2>
-  <div id="container">
-    <a href="/files" class="app-card">
-      <div class="app-icon">📁</div>
-      <div class="app-name">Central Files</div>
-    </a>
-    <a href="/archives" class="app-card">
-      <div class="app-icon">📢</div>
-      <div class="app-name">Bulletin</div>
-    </a>
-    <a href="/logs" class="app-card">
-      <div class="app-icon">💿</div>
-      <div class="app-name">App Logs</div>
-    </a>
-    <a href="/ledger" class="app-card">
-      <div class="app-icon">📒</div>
-      <div class="app-name">Ledger</div>
-    </a>
+  <div id="scrollsection">
+    <div id="container">
+      <a href="/files" class="app-card">
+        <div class="app-icon">📁</div>
+        <div class="app-name">Central Files</div>
+      </a>
+      <a href="/archives" class="app-card">
+        <div class="app-icon">📢</div>
+        <div class="app-name">Bulletin</div>
+      </a>
+      <a href="/logs" class="app-card">
+        <div class="app-icon">💿</div>
+        <div class="app-name">App Logs</div>
+      </a>
+      <a href="/ledger" class="app-card">
+        <div class="app-icon">📒</div>
+        <div class="app-name">Ledger</div>
+      </a>
+    </div>
   </div>
-<script src="/static/browser/js/splashtext.js"></script>
+  <script src="/static/browser/js/splashtext.js"></script>
 <script src="/static/login/js/checklogin.js"></script>
 </body>
 </html>
