--- a/modules/browser/static/css/index.css
+++ b/modules/browser/static/css/index.css
@@ -44,11 +44,17 @@
     width: 90%;
     height: fit-content;
     padding: 10px;
+    background-color: white;
   }
   .app-icon {
     font-size: 40px;
   }
   .app-name {
     font-size: 18px;
+  }
+  #scrollsection {
+    background-color: rgb(233, 233, 233);
+    max-height: 500px;
+    overflow-y: auto;
   }
 }
