--- a/modules/files/templates/index.html
+++ b/modules/files/templates/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-<div class="dashboard">
-    <a href="/" style="color: white;text-decoration: none"><h1>Central Files</h1></a>
+<div class="dashboard"><h1>Central Files</h1></div>
+<div id="back-btn-container">
+    <a id="back-btn" href="/">Back</a>
 </div>
 
 <div class="main">
