--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -27,6 +27,10 @@
         <div class="app-icon">📒</div>
         <div class="app-name">Ledger</div>
       </a>
+      <a href="/battleplans" class="app-card">
+        <div class="app-icon">📔</div>
+        <div class="app-name">Battle Plans</div>
+      </a>
     </div>
   </div>
   <script src="/static/browser/js/splashtext.js"></script>
